添加修改API 修改命令行参数 修改包结构与其他项目统一
