# docs/swagger.yaml
@@ -243,7 +243,56 @@ paths:
             type: array
       summary: Search in an index with POST
       tags:
-      - search
+      - index
+  /keys/{key}:
+    delete:
+      description: Delete key,Use "Del"
+      parameters:
+      - description: index name
+        in: path
+        name: key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Delete key,Use "Del"
+      tags:
+      - key
+    get:
+      description: Get key
+      parameters:
+      - description: index name
+        in: path
+        name: key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Get key
+      tags:
+      - key
+    put:
+      description: Update key,Use "HSET"
+      parameters:
+      - description: index name
+        in: path
+        name: key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Update key,Use "HSET"
+      tags:
+      - key
   /search/{index}:
     get:
       description: Searches the index with a textual query, returning either documents
