# http/search.go
@@ -1,8 +1,8 @@
 package http
 
 import (
-	"gitlab.xtc.home/xtc/redisearchd/conn/redis"
 	"gitlab.xtc.home/xtc/redisearchd/pkg/http"
+	"gitlab.xtc.home/xtc/redisearchd/pkg/search"
 	"strconv"
 	"strings"
 
@@ -49,7 +49,7 @@ func (r *SearchRouter) Route() {
 // @Success 200 {array} http.Response
 func SearchByGet(c *fiber.Ctx) error {
 	index := c.Params("index")
-	cli := redis.Client(index)
+	cli := search.NewClient(index)
 
 	raw := c.Query("raw")
 
@@ -144,7 +144,7 @@ func SearchByGet(c *fiber.Ctx) error {
 // @Success 200 {array} http.Response
 func SearchByPost(c *fiber.Ctx) error {
 	index := c.Params("index")
-	cli := redis.Client(index)
+	cli := search.NewClient(index)
 	var query = new(redisearch.Query)
 	body := c.Request().Body()
 
